--- a/10.3/galera.cnf
+++ b/10.3/galera.cnf
@@ -2,11 +2,13 @@
 # Mandatory settings
 wsrep_on = ON
 wsrep_provider = /usr/lib/galera/libgalera_smm.so
+wsrep_cluster_name = WSREP_CLUSTER_NAME
 wsrep_cluster_address = gcomm://WSREP_NODE_ADDRESS
 wsrep_sst_method = mariabackup
 wsrep_sst_auth = SST_USER:SST_PASSWORD
 wsrep_node_address = NODE_IP
 wsrep_node_name = NODE_NAME
+wsrep_notify_cmd = /bin/true
 binlog_format = row
 innodb_autoinc_lock_mode = 2
 #
